fixed overflow-x to remove white space on the right on mobile view

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -7,6 +7,7 @@
 body {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #222;
     background-color: {{ site.color.primary-body }};
